test/Parse/ConditionalCompilation/pound-if-inside-function.code
// RUN: %target-typecheck-verify-language

// Check that if config statement has range properly nested in its parent
// EOF.

fn foo() { // expected-note {{to match this opening '{'}}
#if BLAH
// expected-error@+2{{expected '}' at end of brace statement}}
// expected-error@+1{{expected #else or #endif at end of conditional compilation block}}
